Propagate down this bit of information