@@ -135,40 +135,45 @@ public class InsdcParser <S extends AbstractSequence<C>, C extends Compound>{
 	 * @return The parsed location
 	 * @throws ParserException thrown in the event of any error during parsing
 	 */
-	public Location parse(String locationString) throws ParserException {
+	public Location parse(String locationString, boolean isSequenceCircular) throws ParserException {
 		featureGlobalStart = Integer.MAX_VALUE;
 		featureGlobalEnd = 1;
 
 		Location l;
-		List<Location> ll = parseLocationString(locationString, 1);
+		List<Location> ll = parseLocationString(locationString, 1, isSequenceCircular);
 
 		if (ll.size() == 1) {
 			l = ll.get(0);
 		} else {
 			l = new SimpleLocation(
-					featureGlobalStart,
-					featureGlobalEnd,
+					new SimplePoint(featureGlobalStart),
+					new SimplePoint(featureGlobalEnd),
 					Strand.UNDEFINED,
+					isSequenceCircular,
 					ll);
 		}
 		return l;
 	}
 
-	/**
-	 * Reader based version of the parse methods.
-	 *
-	 * @param reader The source of the data; assumes that end of the reader
-	 * stream is the end of the location string to parse
-	 * @return The parsed location
-	 * @throws IOException Thrown with any reader error
-	 * @throws ParserException Thrown with any error with parsing locations
-	 */
+	public Location parse(String locationString) throws ParserException {
+		return parse(locationString, false);
+	}
+
+		/**
+         * Reader based version of the parse methods.
+         *
+         * @param reader The source of the data; assumes that end of the reader
+         * stream is the end of the location string to parse
+         * @return The parsed location
+         * @throws IOException Thrown with any reader error
+         * @throws ParserException Thrown with any error with parsing locations
+         */
 	public List<AbstractLocation> parse(Reader reader) throws IOException, ParserException {
 		// use parse(String s) instead!
 		return null;
 	}
 
-	private List<Location> parseLocationString(String string, int versus) throws ParserException {
+	private List<Location> parseLocationString(String string, int versus, boolean isSequenceCircular) throws ParserException {
 		Matcher m;
 		List<Location> boundedLocationsCollection = new ArrayList<Location>();
 
@@ -186,7 +191,8 @@ public class InsdcParser <S extends AbstractSequence<C>, C extends Compound>{
 			if (!splitQualifier.isEmpty()) {
 				//recursive case
 				int localVersus = splitQualifier.equalsIgnoreCase("complement") ? -1 : 1;
-				List<Location> subLocations = parseLocationString(splitString, versus * localVersus);
+				List<Location> subLocations = parseLocationString(
+						splitString, versus * localVersus, isSequenceCircular);
 
 				switch (complexFeaturesAppendMode) {
 					case FLATTEN:
@@ -228,8 +234,8 @@ public class InsdcParser <S extends AbstractSequence<C>, C extends Compound>{
 
 				String accession = m.group(1);
 				Strand s = versus == 1 ? Strand.POSITIVE : Strand.NEGATIVE;
-				int start = Integer.parseInt(m.group(3));
-				int end = m.group(6) == null ? start : new Integer(m.group(6));
+				int start = Integer.valueOf(m.group(3));
+				int end = m.group(6) == null ? start : Integer.valueOf(m.group(6));
 
 				if (featureGlobalStart > start) {
 					featureGlobalStart = start;
@@ -239,8 +245,8 @@ public class InsdcParser <S extends AbstractSequence<C>, C extends Compound>{
 				}
 
 				AbstractLocation l = new SimpleLocation(
-						start,
-						end,
+						new SimplePoint(start),
+						new SimplePoint(end),
 						s
 				);
 
